<resources>
  <string name="app_name">ROYF Drone Travail Pratique</string>
  <string name="app_author">Fabien Roy</string>

  <!-- Interface du PrincipaleActivity -->
  <string name="modele_non_accessible">Drone non-accessible</string>
  <string name="produit_information">Information du produit</string>
  <string name="connexion_perdue">Statut: Aucun produit connecté</string>
  <string name="sdk_version">Version du DJI SDK : 3.5.1</string>

  <!-- Interface du ObjectifsActivity -->
  <string name="objectifs_activity">Objectifs</string>

  <string name="objectif1_etape1">Objectif #1 Étape #1</string>
  <string name="objectif1_etape1_description">Décoller et attérir</string>
  <string name="obj1_etape1_activity">Obj1Etape1Activity</string>

  <string name="objectif1_etape2">Objectif #1 Étape #2</string>
  <string name="objectif1_etape2_description">Bouger</string>
  <string name="obj1_etape2_activity">Obj1Etape2Activity</string>

  <string name="objectif1_etape3">Objectif #1 Étape #3</string>
  <string name="objectif1_etape3_description">Faire le parcours</string>
  <string name="obj1_etape3_activity">Obj1Etape3Activity</string>

  <string name="objectif2_etape1">Objectif #2 Étape #1</string>
  <string name="objectif2_etape1_description">Bouger la caméra du drone</string>
  <string name="obj2_etape1_activity">Obj2Etape1Activity</string>

  <string name="objectif2_etape2">Objectif #2 Étape #2</string>
  <string name="objectif2_etape2_description">Aller chercher l\'image vue par le drone</string>
  <string name="obj2_etape2_activity">Obj2Etape2Activity</string>

  <string name="objectif2_etape3">Objectif #2 Étape #3</string>
  <string name="objectif2_etape3_description">Détecter et suivre une ligne verte</string>
  <string name="obj2_etape3_activity">Obj2Etape3Activity</string>

  <string name="objectif3_etape1">Objectif #3 Étape #1</string>
  <string name="objectif3_etape1_description">Trouver la couleur de la balle verte</string>
  <string name="obj3_etape1_activity">Obj3Etape1Activity</string>

  <string name="connecter">Connecter</string>
  <string name="deconnecter">Déconnecter</string>
  <string name="acceder">Accèder</string>
  <string name="acceder_pareil">Accèder pareil</string>
  <string name="rafraichir">Rafraîchir</string>
  <string name="decoller">Décoller</string>
  <string name="atterir">Attérir</string>
  <string name="demarrer">Démarrer</string>
  <string name="arreter">Arrêter</string>
  <string name="traiter">Traiter</string>
  <string name="demarrer_moteurs">Démarrer les moteurs</string>

  <string name="aller_avant">Avancer</string>
  <string name="aller_arriere">Reculer</string>
  <string name="aller_gaucher">Aller à gauche</string>
  <string name="aller_droite">Aller à droite</string>
  <string name="aller_haut">Monter</string>
  <string name="aller_bas">Descendre</string>
  <string name="tourner_gauche">Tourner à gauche</string>
  <string name="tourner_droite">Tourner à droite</string>

  <string name="pitch_plus">Pitch +</string>
  <string name="pitch_moins">Pitch -</string>
  <string name="roll_plus">Roll +</string>
  <string name="roll_moins">Roll -</string>
  <string name="yaw_plus">Yaw +</string>
  <string name="yaw_moins">Yaw -</string>

  <string name="original_image">Image originale</string>
  <string name="resultat_image">Image résultante</string>
  <string name="original">Original</string>
  <string name="resultat">Résultat</string>

  <string name="capturer">Capturer</string>
  <string name="demarrer_enregistrement">Démarrer l\'enregistrement</string>
  <string name="arreter_enregistrement">Arrêter l\'enregistrement</string>
  <string name="mode_photo">Mode photo</string>
  <string name="mode_video">Mode vidéo</string>
  <string name="mode_suivi_a">Mode suivi A</string>
  <string name="mode_suivi_b">Mode suivi B</string>
</resources>
