<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/activity_obj1_step1"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:paddingBottom="@dimen/activity_vertical_margin"
  android:paddingLeft="@dimen/activity_horizontal_margin"
  android:paddingRight="@dimen/activity_horizontal_margin"
  android:paddingTop="@dimen/activity_vertical_margin"
  tools:context="net.info420.fabien.dronetravailpratique.activities.Obj1Etape2Activity">

  <TextView
    android:text="@string/objectif1_etape2"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="14dp"
    android:textSize="20dp"
    android:layout_centerHorizontal="true"/>

  <TextView
    android:text="@string/objectif1_etape2_description"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textSize="15dp"
    android:layout_alignParentTop="true"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="37dp"/>

  <Button
    android:id="@+id/btn_obj1_etape_2_demarrer_moteurs"
    android:layout_width="wrap_content"
    android:layout_height="50dp"
    android:textAllCaps="false"
    android:text="@string/demarrer_moteurs"
    android:textSize="15dp"
    android:layout_marginTop="70dp"
    android:layout_alignParentTop="true"
    android:layout_centerHorizontal="true"/>

  <Button
    android:id="@+id/btn_obj1_etape_2_atterir"
    android:layout_width="100dp"
    android:layout_height="50dp"
    android:textAllCaps="false"
    android:text="@string/atterir"
    android:textSize="15dp"
    android:layout_marginTop="135dp"
    android:layout_alignParentTop="true"
    android:layout_centerHorizontal="true"/>

  <Button
    android:text="@string/aller_avant"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerVertical="true"
    android:layout_centerHorizontal="true"
    android:id="@+id/btn_obj1_etape_2_aller_avant"/>

  <Button
    android:text="@string/aller_arriere"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@+id/btn_obj1_etape_2_tourner_droite"
    android:layout_centerHorizontal="true"
    android:id="@+id/btn_obj1_etape_2_aller_derriere"/>

  <Button
    android:text="@string/tourner_droite"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/btn_obj1_step2_turn_right"
    android:layout_below="@+id/btn_obj1_etape_2_aller_avant"
    android:layout_toRightOf="@+id/btn_obj1_etape_2_aller_avant"
    android:layout_toEndOf="@+id/btn_obj1_etape_2_aller_avant"/>

  <Button
    android:text="@string/tourner_gauche"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@+id/btn_obj1_etape_2_aller_avant"
    android:layout_toLeftOf="@+id/btn_obj1_etape_2_aller_avant"
    android:layout_toStartOf="@+id/btn_obj1_etape_2_aller_avant"
    android:id="@+id/btn_obj1_etape_2_tourner_gauche"/>

  <Button
    android:text="@string/aller_gaucher"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@+id/btn_obj1_etape_2_aller_derriere"
    android:layout_toLeftOf="@+id/btn_obj1_etape_2_aller_derriere"
    android:layout_toStartOf="@+id/btn_obj1_etape_2_aller_derriere"
    android:id="@+id/btn_obj1_etape_2_aller_gauche"/>

  <Button
    android:text="@string/aller_droite"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@+id/btn_obj1_etape_2_aller_derriere"
    android:layout_toRightOf="@+id/btn_obj1_etape_2_aller_derriere"
    android:layout_toEndOf="@+id/btn_obj1_etape_2_aller_derriere"
    android:id="@+id/btn_obj1_etape_2_aller_droite"/>

</RelativeLayout>