<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/obj2_etape1_activity"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:paddingBottom="@dimen/activity_vertical_margin"
  android:paddingLeft="@dimen/activity_horizontal_margin"
  android:paddingRight="@dimen/activity_horizontal_margin"
  android:paddingTop="@dimen/activity_vertical_margin"
  tools:context="net.info420.fabien.dronetravailpratique.activities.Obj1Etape1Activity">

  <TextView
    android:text="@string/objectif2_etape1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="14dp"
    android:textSize="20sp"
    android:layout_centerHorizontal="true"/>

  <TextView
    android:id="@+id/tv_obj2_etape1_desc"
    android:text="@string/objectif2_etape1_description"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textSize="15sp"
    android:layout_alignParentTop="true"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="37dp"/>

  <Button
    android:id="@+id/btn_obj2_etape1_connecter"
    android:layout_width="wrap_content"
    android:layout_height="50dp"
    android:textAllCaps="false"
    android:text="@string/connecter"
    android:textSize="15sp"
    android:layout_marginTop="70dp"
    android:layout_alignParentTop="true"
    android:layout_centerHorizontal="true"/>

  <Button
    android:id="@+id/btn_obj1_etape2_aller_derriere"
    android:text="@string/pitch_moins"
    android:textAllCaps="false"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignBaseline="@+id/btn_obj2_etape1_pitch_plus"
    android:layout_alignBottom="@+id/btn_obj2_etape1_pitch_plus"
    android:layout_toLeftOf="@+id/btn_obj2_etape1_pitch_plus"
    android:layout_toStartOf="@+id/btn_obj2_etape1_pitch_plus"/>

  <Button
    android:id="@+id/btn_obj2_etape1_pitch_plus"
    android:text="@string/pitch_plus"
    android:layout_width="wrap_content"
    android:layout_below="@id/btn_obj2_etape1_connecter"
    android:textAllCaps="false"
    android:layout_height="wrap_content"
    android:layout_centerVertical="true"
    android:layout_alignRight="@+id/tv_obj2_etape1_desc"
    android:layout_alignEnd="@+id/tv_obj2_etape1_desc"/>

  <Button
    android:id="@+id/btn_obj2_etape1_roll_moins"
    android:text="@string/roll_moins"
    android:textAllCaps="false"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@+id/btn_obj1_etape2_aller_derriere"
    android:layout_alignLeft="@+id/btn_obj1_etape2_aller_derriere"
    android:layout_alignStart="@+id/btn_obj1_etape2_aller_derriere"/>

  <Button
    android:id="@+id/btn_obj2_etape1_roll_plus"
    android:text="@string/roll_plus"
    android:textAllCaps="false"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@+id/btn_obj2_etape1_pitch_plus"
    android:layout_alignRight="@+id/tv_obj2_etape1_desc"
    android:layout_alignEnd="@+id/tv_obj2_etape1_desc"/>

  <Button
    android:id="@+id/btn_obj2_etape1_yaw_moins"
    android:text="@string/yaw_moins"
    android:textAllCaps="false"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@+id/btn_obj2_etape1_roll_moins"
    android:layout_alignLeft="@+id/btn_obj2_etape1_roll_moins"
    android:layout_alignStart="@+id/btn_obj2_etape1_roll_moins"/>

  <Button
    android:id="@+id/btn_obj2_etape1_yaw_plus"
    android:text="@string/yaw_plus"
    android:textAllCaps="false"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@+id/btn_obj2_etape1_roll_plus"
    android:layout_alignLeft="@+id/btn_obj2_etape1_roll_plus"
    android:layout_alignStart="@+id/btn_obj2_etape1_roll_plus"/>

</RelativeLayout>