<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/activity_main"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:paddingBottom="@dimen/activity_vertical_margin"
  android:paddingLeft="@dimen/activity_horizontal_margin"
  android:paddingRight="@dimen/activity_horizontal_margin"
  android:paddingTop="@dimen/activity_vertical_margin"
  tools:context="net.info420.fabien.dronetravailpratique.activities.PrincipaleActivity">

  <TextView
    android:id="@+id/tv_principale_status_connexion"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="100dp"
    android:gravity="center"
    android:text="@string/connexion_perdue"
    android:textColor="@android:color/black"
    android:textSize="20sp"
    android:textStyle="bold"/>

  <TextView
    android:id="@+id/tv_principale_produit_info"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="180dp"
    android:text="@string/produit_information"
    android:textColor="@android:color/black"
    android:textSize="20sp"
    android:gravity="center"
    android:textStyle="bold"
    />

  <TextView
    android:id="@+id/tv_principale_modele_accessible"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    android:gravity="center"
    android:layout_marginTop="230dp"
    android:text="@string/modele_non_accessible"
    android:textSize="15sp"/>

  <Button
    android:id="@+id/btn_principale_ouvrir"
    android:layout_width="150dp"
    android:layout_height="55dp"
    android:layout_centerHorizontal="true"
    android:textAllCaps="false"
    android:layout_marginTop="280dp"
    android:text="@string/acceder"
    android:textSize="15sp"
    />

  <Button
    android:id="@+id/btn_principale_ouvrir_pareil"
    android:layout_width="150dp"
    android:layout_height="55dp"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="280dp"
    android:layout_toRightOf="@id/btn_principale_ouvrir"
    android:backgroundTint="@color/colorAccent"
    android:text="@string/acceder_pareil"
    android:textAllCaps="false"
    android:textColor="@color/colorTextIcons"/>

  <Button
    android:id="@+id/btn_principale_rafraichir"
    android:layout_width="150dp"
    android:layout_height="55dp"
    android:layout_centerHorizontal="true"
    android:textAllCaps="false"
    android:layout_marginTop="330dp"
    android:text="@string/rafraichir"
    android:textSize="15sp"
    />

  <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="425dp"
    android:text="@string/sdk_version"
    android:textSize="15sp"
    />

  <!-- TODO : Enlever la license? -->
  <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="450dp"
    android:text="@string/app_license"
    android:textSize="10sp"
    />

</RelativeLayout>