<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/activity_objectives"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:paddingBottom="@dimen/activity_vertical_margin"
  android:paddingLeft="@dimen/activity_horizontal_margin"
  android:paddingRight="@dimen/activity_horizontal_margin"
  android:paddingTop="@dimen/activity_vertical_margin"
  tools:context="net.info420.fabien.dronetravailpratique.activities.ObjectifsActivity">

  <Button
    android:id="@+id/btn_obj1_etape1"
    android:layout_width="200dp"
    android:layout_height="50dp"
    android:layout_alignLeft="@+id/btn_obj1_etape2"
    android:layout_alignParentTop="true"
    android:layout_alignStart="@+id/btn_obj1_etape2"
    android:backgroundTint="@android:color/holo_blue_bright"
    android:text="@string/objectif1_etape1"
    android:textAllCaps="false"
    android:textSize="15sp"
    android:textColor="@color/colorTextIcons"/>

  <Button
    android:id="@+id/btn_obj1_etape2"
    android:layout_width="200dp"
    android:layout_height="50dp"
    android:layout_below="@+id/btn_obj1_etape1"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="18dp"
    android:backgroundTint="@android:color/holo_blue_light"
    android:text="@string/objectif1_etape2"
    android:textAllCaps="false"
    android:textSize="15sp"
    android:textColor="@color/colorTextIcons"/>

  <Button
    android:id="@+id/btn_obj1_etape3"
    android:layout_width="200dp"
    android:layout_height="50dp"
    android:layout_below="@+id/btn_obj1_etape2"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="18dp"
    android:backgroundTint="@android:color/holo_green_light"
    android:text="@string/objectif1_etape3"
    android:textAllCaps="false"
    android:textColor="@color/colorTextIcons"
    android:textSize="15sp"/>

  <Button
    android:id="@+id/btn_obj2_etape1"
    android:layout_width="200dp"
    android:layout_height="50dp"
    android:layout_below="@+id/btn_obj1_etape3"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="18dp"
    android:backgroundTint="@android:color/holo_orange_light"
    android:text="@string/objectif2_etape1"
    android:textAllCaps="false"
    android:textColor="@color/colorTextIcons"
    android:textSize="15sp"/>

  <Button
    android:id="@+id/btn_obj2_etape2"
    android:layout_width="200dp"
    android:layout_height="50dp"
    android:layout_below="@+id/btn_obj2_etape1"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="18dp"
    android:backgroundTint="@android:color/holo_orange_dark"
    android:text="@string/objectif2_etape2"
    android:textAllCaps="false"
    android:textColor="@color/colorTextIcons"
    android:textSize="15sp"/>

  <Button
    android:id="@+id/btn_obj2_etape3"
    android:layout_width="200dp"
    android:layout_height="50dp"
    android:layout_below="@+id/btn_obj2_etape2"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="18dp"
    android:backgroundTint="@android:color/holo_red_dark"
    android:text="@string/objectif2_etape3"
    android:textAllCaps="false"
    android:textColor="@color/colorTextIcons"
    android:textSize="15sp"/>

  <Button
    android:id="@+id/btn_obj3_etape1"
    android:layout_width="200dp"
    android:layout_height="50dp"
    android:layout_below="@+id/btn_obj2_etape3"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="18dp"
    android:backgroundTint="@android:color/holo_purple"
    android:text="@string/objectif3_etape1"
    android:textAllCaps="false"
    android:textColor="@color/colorTextIcons"
    android:textSize="15sp"/>

</RelativeLayout>